--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="tshirt-container">
 
         <img id="tshirt" src="https://ourcodeworld.com/public-media/gallery/gallery-5d5afd3f1c7d6.png" />
-        <div id="canvas"></div> <!--Absolute Positioned overtop T-Shirt-->
+        <div id="canvas"></div> <!--absolute Positioned overtop T-Shirt-->
         
         <!-- Questions -->
         <div id="options">
